2008-07-02  Sam Steingold  <sds@gnu.org>

	* stream.d (make_terminal_io): pipe, not just file, i/o handles
	imply non-terminal standard i/o; this should somewhat simplify
	scripting by not requiring the users to resort to make-stream
	(handle_type_t): new type
	(handle_type, regular_handle_type_p, pipe_handle_type_p)
	(pipe_file_handle_p): new functions
	(regular_handle_p): a macro combination of regular_handle_type_p
	and handle_type

2008-07-02  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.46 (2008-07-02)

2008-07-01  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (make_xid_obj_2): signal a
	LOOKUP-ERROR instead of an ERROR; use MAKE-CONDITION &
	SYS::CORRECTABLE-ERROR instead of correctable_error()
	(x_type_error): new function
	(my_type_error, with_stringable_0_tc, get_aint32): use it
	(make_xid_obj_2): no prealloc for cached objects!
	* lispbibl.d (correctable_error): do NOT export to clisp.h

2008-06-30  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (make_xid_obj_low): check that
	prealloc is of the correct type
	* modules/clx/new-clx/image.lisp (*image-bit-lsb-first-p*)
	(*image-byte-lsb-first-p*): default to (NOT SYS::*BIG-ENDIAN*)

2008-06-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2002364 ]: XID reuse causes clx cache to get out of sync
	* modules/clx/new-clx/clx.f (make_xid_obj_2): when the cached
	object is of the wrong type, signal a continuable error and offer
	to invalidate either the cache entry or the whole cache
	* lispbibl.d (correctable_error): export to clisp.h

2008-06-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2007052 ] socket-connect with :timeout to a dead port
	* socket.d (connect_via_ip): use getsockopt() to check the status
	of the socket before returning it, as described in the linux man page

2008-06-29  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.45++: pretest [+ gnulib-imported build-aux-update]

2008-06-29  Sam Steingold  <sds@podval.org>

	* modules/libsvm: upgraded to upstream 2.86
